segundo idioma añadido
- añadido logica de envio de email como notificacion.
- añadido segundo idioma como opcion