@@ -1,5 +1,7 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>GestorTareas</artifactId>
@@ -7,10 +9,7 @@
     <version>0.0.1</version>
   </parent>
 
-
   <artifactId>app</artifactId>
-
-
   <name>app</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
@@ -21,115 +20,86 @@
   </properties>
 
   <dependencies>
-
     <dependency>
-        <groupId>main.svfa.com</groupId>
-        <artifactId>BasesDatos</artifactId>
-        <version>0.0.1</version>
+      <groupId>main.svfa.com</groupId>
+      <artifactId>BasesDatos</artifactId>
+      <version>0.0.1</version>
     </dependency>
-<dependency>
-    <groupId>main.svfa.com</groupId>
-    <artifactId>gui</artifactId>
-    <version>0.0.1</version>
-  <type>jar</type>
-</dependency>
-    <!-- Otras dependencias -->
-
-
+    <dependency>
+      <groupId>main.svfa.com</groupId>
+      <artifactId>gui</artifactId>
+      <version>0.0.1</version>
+      <type>jar</type>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>org.openjfx</groupId>
-      <artifactId>javafx-graphics</artifactId>
-      <version>21.0.2</version>
-      <type>jar</type>
-    </dependency>
-    <dependency>
-      <groupId>main.svfa.com</groupId>
-      <artifactId>Gui</artifactId>
-      <version>0.0.1</version>
-      <type>jar</type>
-    </dependency>
+<dependency>
+    <groupId>org.openjfx</groupId>
+    <artifactId>javafx-controls</artifactId>
+    <version>21.0.2</version>
+</dependency>
+<dependency>
+    <groupId>org.openjfx</groupId>
+    <artifactId>javafx-fxml</artifactId>
+    <version>21.0.2</version>
+</dependency>
+<dependency>
+    <groupId>org.openjfx</groupId>
+    <artifactId>javafx-graphics</artifactId>
+    <version>21.0.2</version>
+</dependency>
+
   </dependencies>
 
-  <build>
-    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
-      <plugins>
-                <plugin>
-                     <groupId>org.apache.maven.plugins</groupId>
-                     <artifactId>maven-compiler-plugin</artifactId>
-                     <version>3.12.1</version>
-                     <configuration>
-                         <source>21</source>
-                         <target>21</target>
-                     </configuration>
-                 </plugin>
-                 <!-- Agregar la configuración para maven-source-plugin -->
-                 <plugin>
-                     <groupId>org.apache.maven.plugins</groupId>
-                     <artifactId>maven-source-plugin</artifactId>
-                     <version>3.3.0</version> <!-- Asegúrate de usar la versión más reciente -->
-                 </plugin>
-                 <!-- Agregar la configuración para maven-javadoc-plugin -->
-                 <plugin>
-                     <groupId>org.apache.maven.plugins</groupId>
-                     <artifactId>maven-javadoc-plugin</artifactId>
-                     <version>3.6.3</version> <!-- Asegúrate de usar la versión más reciente -->
-                 </plugin>
-		  
-        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
+<build>
+    <plugins>
         <plugin>
-          <artifactId>maven-clean-plugin</artifactId>
-          <version>3.3.2</version>
-        </plugin>
-        <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
-        <plugin>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>3.3.1</version>
-        </plugin>
-
-        <plugin>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>3.2.5</version>
-        </plugin>
-
-        <plugin>
-          <artifactId>maven-install-plugin</artifactId>
-          <version>3.1.1</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>3.1.1</version>
-        </plugin>
-        <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
-        <plugin>
-          <artifactId>maven-site-plugin</artifactId>
-          <version>3.12.1</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-project-info-reports-plugin</artifactId>
-          <version>3.5.0</version>
-        </plugin>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-jar-plugin</artifactId>
-            <version>3.3.0</version>
-            <configuration>
-            <archive>
-                    <manifest>
-                        <addClasspath>true</addClasspath>
-                        <classpathPrefix>lib/</classpathPrefix>
-                        <mainClass>org.app.App</mainClass>
-                    </manifest>
-            </archive>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-maven-plugin</artifactId>
+        <version>0.0.8</version>
+        <configuration>
+          <mainClass>org.app.App</mainClass>
+          <launcher>launcherName</launcher>
+          <jvmArgs>
+            --module-path "/Users/stevefletesalfaro/Documents/GitHub/GestorTarea/GestorTareas/javafx-sdk-21.0.3/lib" --add-modules javafx.controls,javafx.fxml
+          </jvmArgs>
         </configuration>
+      </plugin>
+<plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-shade-plugin</artifactId>
+            <version>3.2.4</version>
+            <executions>
+                <execution>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>shade</goal>
+                    </goals>
+                    <configuration>
+                        <transformers>
+                            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                <mainClass>org.app.App</mainClass>
+                            </transformer>
+                        </transformers>
+                        <filters>
+                            <filter>
+                                <artifact>*:*</artifact>
+                                <includes>
+                                    <include>**/*.fxml</include>
+                                    <include>**/*.css</include>
+                                    <include>**/*.properties</include> <!-- Asegúrate de incluir los archivos .properties -->
+                                </includes>
+                            </filter>
+                        </filters>
+                    </configuration>
+                </execution>
+            </executions>
         </plugin>
+    </plugins>
+</build>
 
-      </plugins>
-    </pluginManagement>
-  </build>
 </project>
